--- a/devtools/client/application/src/base.css
+++ b/devtools/client/application/src/base.css
@@ -1,10 +1,10 @@
-
-
-
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 :root {
-  
-  
+  /* Typography from Photon */
+  /* See https://firefox-dev.tools/photon/visuals/typography.html */
   --caption-10-font-size: 11px;
   --caption-10-font-weight: 400;
   --body-10-font-size: 13px;
@@ -18,23 +18,23 @@
   --title-20-font-weight: 400;
   --title-30-font-size: 22px;
 
-  
+  /* Global styles */
   --base-line-height: 1.8;
   --list-line-height: 1.25;
 
- 
+ /* Global colours */
   --separator-color: var(--theme-splitter-color);
   --bg-color: var(--theme-toolbar-background);
   --highlight-color: var(--theme-toolbar-background-hover);
 
-  
+  /* extra, raw colors */
   --blue-50-a30: rgba(10, 132, 255, 0.3);
 
-  
+  /* Global layout vars */
   --base-unit: 4px;
 
-  
-
+  /* these are the color for icons in empty pages - note that these are not
+     available in devtools' variables.css */
   --dimmed-icon-color: #d3d3d3;
 }
 
@@ -42,9 +42,9 @@
   --dimmed-icon-color: #484848;
 }
 
-
-
-
+/*
+* Reset some tags
+*/
 
 * {
   box-sizing: border-box;
@@ -62,7 +62,7 @@ ul {
 
 a {
   color: var(--theme-highlight-blue);
-  text-decoration: none;
+  text-decoration: underline;
   cursor: pointer;
 }
 
@@ -74,9 +74,9 @@ table {
   border-spacing: 0;
 }
 
-
-
-
+/*
+ * utility classes
+ */
 
 .technical-text {
   font-family: monospace;
