--- a/devtools/client/themes/components-frame.css
+++ b/devtools/client/themes/components-frame.css
@@ -1,11 +1,11 @@
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this file,
+ * You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-
-
-
-
-
-
-
+/**
+ * Frame Component
+ * Styles for React component at `devtools/client/shared/components/Frame.js`
+ */
 
 .theme-light {
   --frame-link-line-color: var(--theme-highlight-blue);
@@ -41,12 +41,9 @@
 
 .frame-link a.frame-link-source {
   cursor: pointer;
-  text-decoration: none;
-  font-style: normal;
-}
-
-.frame-link a.frame-link-source:hover {
   text-decoration: underline;
+  text-decoration-skip-ink: none;
+  font-style: normal;
 }
 
 .frame-link .frame-link-host {
