--- a/toolkit/components/glean/build_scripts/glean_parser_ext/templates/js_pings.jinja2
+++ b/toolkit/components/glean/build_scripts/glean_parser_ext/templates/js_pings.jinja2
@@ -8,8 +8,10 @@ Jinja2 template is not. Please file bugs! #}
 
 
 
-#ifndef mozilla_GleanJSPingsLookup_h
-#define mozilla_GleanJSPingsLookup_h
+#include "mozilla/glean/bindings/GleanJSPingsLookup.h"
+
+#include "mozilla/PerfectHash.h"
+#include "nsString.h"
 
 #define GLEAN_PING_INDEX_BITS ({{ping_index_bits}})
 #define GLEAN_PING_ID(entry) ((entry) >> GLEAN_PING_INDEX_BITS)
@@ -20,7 +22,7 @@ namespace mozilla::glean {
 
 using ping_entry_t = uint32_t;
 
-static Maybe<uint32_t> ping_result_check(const nsACString& aKey, ping_entry_t aEntry);
+Maybe<uint32_t> ping_result_check(const nsACString& aKey, ping_entry_t aEntry);
 
 {{ ping_string_table }}
 
@@ -29,7 +31,7 @@ static Maybe<uint32_t> ping_result_check(const nsACString& aKey, ping_entry_t aE
 
 
 
-static const char* GetPingName(ping_entry_t aEntry) {
+const char* GetPingName(ping_entry_t aEntry) {
   uint32_t idx = GLEAN_PING_INDEX(aEntry);
   MOZ_ASSERT(idx < sizeof(gPingStringTable), "Ping index larger than string table");
   return &gPingStringTable[idx];
@@ -41,7 +43,7 @@ static const char* GetPingName(ping_entry_t aEntry) {
 
 
 
-static Maybe<uint32_t> ping_result_check(const nsACString& aKey, ping_entry_t aEntry) {
+Maybe<uint32_t> ping_result_check(const nsACString& aKey, ping_entry_t aEntry) {
   uint32_t idx = GLEAN_PING_INDEX(aEntry);
   uint32_t id = GLEAN_PING_ID(aEntry);
 
@@ -61,4 +63,3 @@ static Maybe<uint32_t> ping_result_check(const nsACString& aKey, ping_entry_t aE
 #undef GLEAN_PING_INDEX
 
 }  
-#endif  
