--- a/toolkit/components/glean/build_scripts/glean_parser_ext/templates/gifft.jinja2
+++ b/toolkit/components/glean/build_scripts/glean_parser_ext/templates/gifft.jinja2
@@ -8,6 +8,8 @@ Jinja2 template is not. Please file bugs! #}
 
 #include "mozilla/AppShutdown.h"
 #include "mozilla/ClearOnShutdown.h"
+#include "mozilla/glean/bindings/GleanJSMetricsLookup.h"
+#include "mozilla/glean/bindings/jog/JOG.h"
 #include "mozilla/Maybe.h"
 #include "mozilla/Telemetry.h"
 #include <tuple>
@@ -21,6 +23,9 @@ Jinja2 template is not. Please file bugs! #}
 
 #ifndef mozilla_glean_{{ probe_type }}GifftMap_h
 #define mozilla_glean_{{ probe_type }}GifftMap_h
+
+#define DYNAMIC_METRIC_BIT ({{runtime_metric_bit}})
+#define GLEAN_METRIC_ID(id) ((id) & ((1ULL << {{id_bits}}) - 1))
 
 namespace mozilla::glean {
 
@@ -227,10 +232,35 @@ static{% if probe_type == "Event" %} inline{% endif %} Maybe<{{ probe_type }}ID>
     }
 {% endfor %}
     default: {
+      if (MOZ_UNLIKELY(aId & (1 << DYNAMIC_METRIC_BIT))) {
+        
+        
+        
+
+        
+        MOZ_ASSERT(NS_IsMainThread());
+
+        auto metricName = JOG::GetMetricName(aId);
+        
+        
+        if (metricName.isSome()) {
+          auto maybeMetric = MetricByNameLookup(metricName.ref());
+          if (maybeMetric.isSome()) {
+            uint32_t staticId = GLEAN_METRIC_ID(maybeMetric.value());
+            
+            MOZ_ASSERT(!(staticId & (1 << DYNAMIC_METRIC_BIT)));
+            return {{ probe_type }}IdForMetric(staticId);
+          }
+        }
+      }
       return Nothing();
     }
   }
 }
 
 }  
+
+#undef GLEAN_METRIC_ID
+#undef DYNAMIC_METRIC_BIT
+
 #endif  
