--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -227,11 +227,6 @@
   &[multiselected-move-together][multiselected]:not([selected]) {
     z-index: 2;
   }
-
-  &:is([visuallyselected], [multiselected]) {
-    color: var(--tab-selected-textcolor);
-    color-scheme: var(--tab-selected-color-scheme);
-  }
 }
 
 .tab-content {
@@ -243,6 +238,11 @@
 
   :root:not([uidensity=compact]) &[pinned] {
     padding: 0 10px;
+  }
+
+  &:is([selected], [multiselected]) {
+    color: var(--tab-selected-textcolor);
+    color-scheme: var(--tab-selected-color-scheme);
   }
 }
 
